Tried to fix overflow on table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,41 +78,34 @@ html{
 }
 
 #results-section{
-    padding: 5px 0 5px 0;
+    padding: 1rem;
 }
 
-/* #data-table{
-    padding: 0 1rem 0 1rem;
-    overflow: hidden;
-}*/
+#data-col{
+    padding-right: 1rem;
+}
+
+.table{
+    font-family: 'Lato', 'sans-serif';
+    font-size: 1rem;
+}
+
+/* .fixed-table-container{
+    padding-bottom: 30px;
+} */
+
+/* .fixed-table-border{
+    height: 0px !important;
+    display: none;
+} */
 
 #thead-custom{
     background-color: #0066cc;
     color: #ffffff; 
 }
 
-.table{
-    font-family: 'Lato', 'sans-serif';
-    font-size: 1rem;
-    padding: 0 1rem 0 1rem;
-    /* overflow: hidden; */
-}
-
-.fixed-table-border{
-    /* height: 0px; */
-    display: none;
-}
-
 .data-fas{
     font-size: 1.5rem;
-}
-
-#data-col{
-    padding: 0 1rem 0 1rem;
-}
-
-#map-col{
-    padding-right: 1rem;
 }
 
 #map{
